--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
+/* RESET */
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  -webkit-font-smoothing: antialiased;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
 /* GENERAL */
 
 body {
@@ -72,7 +100,6 @@ header {
   flex-direction: column;
   gap: 1.5rem;
   list-style: none;
-  padding: 0;
 }
 
 @media (min-width: 48rem) {
